--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- this tutorial is followed by following tutorial : https://www.youtube.com/watch?v=AQf8SBcEG8M -->
     <section class="top">scroll down</section>
 
     <section class="container">
